# aoc-2022

./: Cargo.toml  README.md
input/: day05-stacks.txt  test02.txt  test03.txt
src/: geom.rs  lib.rs
